--- a/cloud/lxc/index.html
+++ b/cloud/lxc/index.html
@@ -72,8 +72,8 @@
 		
 <span id="page-top"></span>
 <main class="main">
-	<article class="content" id="lxc-containers-management">
-		<header class="content-header">
+  <article class="content" id="lxc-containers-management">
+    <header class="content-header">
 <nav class="breadcrumb">
 	<ul class="breadcrumbs">
 		<li>
@@ -84,10 +84,6 @@
 	</ul>
 </nav>
 
-<h1 class="page-title cloud" id="lxc-containers-management">LXC containers management</h1>
-<div class="content-header-links">
-  
-  <a target="_blank" class="tooltip right edit-link" data-tooltip="Edit this page on GitHub" href="https://github.com/makinacorpus/makina-states/edit/v2/doc/hugo/content/cloud/lxc/index.md"><i class="icon-pencil" aria-hidden="true"></i></a></div>
 
 	<ul class="tags">
 		<li class="icon"><i class="icon-tags"></i></li>
@@ -98,6 +94,18 @@
 		
 	</ul>
 
+
+<div class="page-title-wrapper">
+  <h1
+    class="page-title cloud"
+    id="lxc-containers-management">LXC containers management<span class="content-header-links-wrapper">
+<span class="content-header-links">
+  
+  <a target="_blank" class="tooltip right edit-link" data-tooltip="Edit this page on GitHub" href="https://github.com/makinacorpus/makina-states/edit/v2/doc/hugo/content/cloud/lxc/index.md"><i class="icon-pencil" aria-hidden="true"></i></a></span>
+</span>
+
+  </h1>
+</div>
 
 		</header>
     <div class="body-copy" 
