--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@
       
 
       <h1 class="page-title " id="makinastates-documentation">MakinaStates documentation</h1>
-      <div class="content-header-links">
+      <span class="content-header-links-wrapper">
+<span class="content-header-links">
   
-  <a target="_blank" class="tooltip right edit-link" data-tooltip="Edit this page on GitHub" href="https://github.com/makinacorpus/makina-states/edit/v2/doc/hugo/content/_index.md"><i class="icon-pencil" aria-hidden="true"></i></a></div>
+  <a target="_blank" class="tooltip right edit-link" data-tooltip="Edit this page on GitHub" href="https://github.com/makinacorpus/makina-states/edit/v2/doc/hugo/content/_index.md"><i class="icon-pencil" aria-hidden="true"></i></a></span>
+</span>
 
       
 
