--- a/json/dummy/index.html
+++ b/json/dummy/index.html
@@ -72,8 +72,8 @@
 		
 <span id="page-top"></span>
 <main class="main">
-	<article class="content" id="">
-		<header class="content-header">
+  <article class="content" id="">
+    <header class="content-header">
 <nav class="breadcrumb">
 	<ul class="breadcrumbs">
 		<li>
@@ -84,11 +84,19 @@
 	</ul>
 </nav>
 
-<h1 class="page-title json" id=""></h1>
-<div class="content-header-links">
-  
-  <a target="_blank" class="tooltip right edit-link" data-tooltip="Edit this page on GitHub" href="https://github.com/makinacorpus/makina-states/edit/v2/doc/hugo/content/json/dummy.md"><i class="icon-pencil" aria-hidden="true"></i></a></div>
 
+
+<div class="page-title-wrapper">
+  <h1
+    class="page-title json"
+    id=""><span class="content-header-links-wrapper">
+<span class="content-header-links">
+  
+  <a target="_blank" class="tooltip right edit-link" data-tooltip="Edit this page on GitHub" href="https://github.com/makinacorpus/makina-states/edit/v2/doc/hugo/content/json/dummy.md"><i class="icon-pencil" aria-hidden="true"></i></a></span>
+</span>
+
+  </h1>
+</div>
 
 		</header>
     <div class="body-copy" 
