--- a/topics/ssl/index.html
+++ b/topics/ssl/index.html
@@ -75,8 +75,8 @@
 		
 <span id="page-top"></span>
 <main class="main">
-	<article class="content" id="manage-ssl-certificates">
-		<header class="content-header">
+  <article class="content" id="manage-ssl-certificates">
+    <header class="content-header">
 <nav class="breadcrumb">
 	<ul class="breadcrumbs">
 		<li>
@@ -87,10 +87,6 @@
 	</ul>
 </nav>
 
-<h1 class="page-title topics" id="manage-ssl-certificates">Manage ssl certificates</h1>
-<div class="content-header-links">
-  
-  <a target="_blank" class="tooltip right edit-link" data-tooltip="Edit this page on GitHub" href="https://github.com/makinacorpus/makina-states/edit/v2/doc/hugo/content/topics/ssl/index.md"><i class="icon-pencil" aria-hidden="true"></i></a></div>
 
 	<ul class="tags">
 		<li class="icon"><i class="icon-tags"></i></li>
@@ -101,6 +97,18 @@
 		
 	</ul>
 
+
+<div class="page-title-wrapper">
+  <h1
+    class="page-title topics"
+    id="manage-ssl-certificates">Manage ssl certificates<span class="content-header-links-wrapper">
+<span class="content-header-links">
+  
+  <a target="_blank" class="tooltip right edit-link" data-tooltip="Edit this page on GitHub" href="https://github.com/makinacorpus/makina-states/edit/v2/doc/hugo/content/topics/ssl/index.md"><i class="icon-pencil" aria-hidden="true"></i></a></span>
+</span>
+
+  </h1>
+</div>
 
 		</header>
     <div class="body-copy" 
